# CursoFastAPI

./: README.rst
secao02/: pyproject.toml  requirements.txt
secao02/secao02/: main.py
secao02/tests/: test_secao02.py
secao03/: pyproject.toml  requirements.txt
secao03/secao03/: main.py  main2.py  models.py
secao03/secao03/routs/: curso_router.py
secao03/tests/: test_secao03.py
secao04/: _docker-compose ti  criar_tabelas.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements2.txt
secao04/api/v1/: api.py
secao04/api/v1/endpoints/: curso.py
secao04/api/v1/enndpoints/: curso.py
secao04/core/: configs.py
secao04/models/: curso_model.py
secao04/schemas/: curso_schema.py
secao04/tests/: test_secao04.py
secao05/: .gitignnore  pyproject.toml  requirements.txt
secao05/secao05/: configs.py  database.py  deps.py
secao05/tests/: test_secao05.py
