[tool.poetry]
name = "secao05"
version = "0.1.0"
description = ""
authors = ["CleberNandi <cleber.nandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.75.2"
uvicorn = "0.17.6"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
